--- a/_teaching/2025-tcc-1.md
+++ b/_teaching/2025-tcc-1.md
@@ -33,3 +33,4 @@ O curso Projeto Final I oferece a oportunidade de aplicar todos os conhecimentos
 # Slides de aula
 
 - [Visão Geral do Curso](https://denmartins.github.io/files/lectures/01-TCC-VisaoGeral.pdf)
+- [Roteiro da apresentação parcial](https://denmartins.github.io/files/lectures/02-TCC-Apresentacao-Parcial.pdf)
