--- a/_teaching/2025-tcc-1.md
+++ b/_teaching/2025-tcc-1.md
@@ -11,13 +11,14 @@ location: "Campinas, Brazil"
 
 O curso Projeto Final I oferece a oportunidade de aplicar todos os conhecimentos adquiridos ao longo da graduação na concepção, desenvolvimento e validação de um projeto de engenharia de computação, com acompanhamento docente e foco em inovação, metodologia científica e responsabilidade ética.
 
-# 📌 O que vamos trabalhar nesta disciplina?
+# O que vamos trabalhar nesta disciplina?
 
-- ✅ Desenvolvimento do Projeto Final – Estruturação e implementação de um projeto de Engenharia de Computação.
-- ✅ Metodologia Científica e Tecnológica – Abordagens para pesquisa, análise e validação de soluções.
-- ✅ Documentação e Apresentação Técnica – Desenvolvimento de relatórios técnicos e preparação para defesa do projeto.
+- Desenvolvimento do Projeto Final – Estruturação e implementação de um projeto de Engenharia de Computação.
+- Metodologia Científica e Tecnológica – Abordagens para pesquisa, análise e validação de soluções.
+- Documentação e Apresentação Técnica – Desenvolvimento de relatórios técnicos e preparação para defesa do projeto.
 
-# 💡 O que esperar do curso?
+# O que esperar do curso?
+
 - Acompanhamento próximo do professor para direcionamento técnico e metodológico.
 - Discussões e revisões periódicas para aprimorar a qualidade do projeto.
 - Desenvolvimento de habilidades essenciais para a prática profissional e acadêmica.
@@ -30,7 +31,8 @@ O curso Projeto Final I oferece a oportunidade de aplicar todos os conhecimentos
 - SEVERINO, Antonio Joaquim. Metodologia do trabalho científico. 23.ed. São Paulo, SP: Cortez, 2007. 334 p. ISBN
  
 
-# Slides de aula
+# Links Importantes
 
-- [Visão Geral do Curso](https://denmartins.github.io/files/lectures/01-TCC-VisaoGeral.pdf)
-- [Roteiro da apresentação parcial](https://denmartins.github.io/files/lectures/02-TCC-Apresentacao-Parcial.pdf)
+- [Visão Geral do Curso](https://denmartins.github.io/files/lectures/2025/TCC/01-TCC-VisaoGeral.pdf)
+- [Roteiro da apresentação parcial](https://denmartins.github.io/files/lectures/2025/TCC/02-TCC-Apresentacao-Parcial.pdf)
+- Livro Metodologia de Pesquisa (CAPES): [PDF](https://educapes.capes.gov.br/bitstream/capes/432206/2/Livro_Metodologia%20da%20Pesquisa%20-%20Comum%20a%20todos%20os%20cursos.pdf)
