add new material

--- a/_teaching/2025-tcc-1.md
+++ b/_teaching/2025-tcc-1.md
@@ -33,6 +33,6 @@ O curso Projeto Final I oferece a oportunidade de aplicar todos os conhecimentos
 
 # Links Importantes
 
-- [Visão Geral do Curso](https://denmartins.github.io/files/lectures/2025/TCC/01-TCC-VisaoGeral.pdf)
-- [Roteiro da apresentação parcial](https://denmartins.github.io/files/lectures/2025/TCC/02-TCC-Apresentacao-Parcial.pdf)
+- Visão Geral do Curso: [PDF](https://denmartins.github.io/files/lectures/2025/TCC/TCC1-Organizacao.pdf) - [HTML](https://denmartins.github.io/files/lectures/2025/TCC/TCC1-Organizacao.html)
+- Roteiro da apresentação parcial: [PDF](https://denmartins.github.io/files/lectures/2025/TCC/02-TCC-Apresentacao-Parcial.pdf)
 - Livro Metodologia de Pesquisa (CAPES): [PDF](https://educapes.capes.gov.br/bitstream/capes/432206/2/Livro_Metodologia%20da%20Pesquisa%20-%20Comum%20a%20todos%20os%20cursos.pdf)
