--- a/files/lectures/2025/VC/VC-Redes-Neurais-MNIST-Notebook.ipynb
+++ b/files/lectures/2025/VC/VC-Redes-Neurais-MNIST-Notebook.ipynb
@@ -1098,7 +1098,7 @@
     "</td>\n",
     "<td style=\"vertical-align:middle;text-align:center;border:none;width:50%;\">\n",
     "\n",
-    "![alt text](nn.svg)\n",
+    "![MLP](nn.svg)\n",
     "\n",
     "</td>\n",
     "</tr>\n",
