--- a/files/lectures/2025/TopicosCD/code/TCD-Instruction-Finetuning-LLM.ipynb
+++ b/files/lectures/2025/TopicosCD/code/TCD-Instruction-Finetuning-LLM.ipynb
@@ -1821,7 +1821,7 @@
    },
    "outputs": [],
    "source": [
-    "from LLM_Definitions import GPTModel, load_weights_into_gpt\n",
+    "from llmdefinitions import GPTModel, load_weights_into_gpt\n",
     "\n",
     "BASE_CONFIG = {\n",
     "    \"vocab_size\": 50257,     # Vocabulary size\n",
@@ -1914,7 +1914,7 @@
    },
    "outputs": [],
    "source": [
-    "from LLM_Definitions import (\n",
+    "from llmdefinitions import (\n",
     "    generate,\n",
     "    text_to_token_ids,\n",
     "    token_ids_to_text\n",
@@ -2017,7 +2017,7 @@
    },
    "outputs": [],
    "source": [
-    "from LLM_Definitions import (\n",
+    "from llmdefinitions import (\n",
     "    calc_loss_loader,\n",
     "    train_model_simple\n",
     ")"
@@ -2184,7 +2184,7 @@
    },
    "outputs": [],
    "source": [
-    "from LLM_Definitions import plot_losses\n",
+    "from llmdefinitions import plot_losses\n",
     "\n",
     "epochs_tensor = torch.linspace(0, num_epochs, len(train_losses))\n",
     "plot_losses(epochs_tensor, tokens_seen, train_losses, val_losses)"
